Fixing form spacing for yesno

--- a/source/style.scss
+++ b/source/style.scss
@@ -497,7 +497,8 @@ select {
   }
 }
 
-.fieldpart {
+.fieldpart,
+.yesnospacing {
   &.col-md-8 {
     flex: 0 0 100% !important;
     max-width: 100% !important;
